# parallel_systems

./: .gitignore  CMakeLists.txt  README.md  input.txt  jacobi_serial-Wtime.c
common/include/common/: allocate_grid.h  input.h  prints.h  read_input.h  timing.h
common/scripts/: csv_create_data_row.sh  csv_create_header_row.sh  print.sh  rename_pbs_config.sh  show_qsub_job_info.sh  show_qsub_job_outputs.sh  wait_qsub_job.sh
common/src/: allocate_grid.c  check_solution.c  input.c  prints.c  read_input.c  timing.c
cuda/: CMakeLists.txt  Makefile  PBS_template.sh
cuda/include/: check_solution.h  jacobi_gpu.h  timestamp.h
cuda/src/: check_solution.c  jacobi_gpu.cu  main.cpp
hybridMPI/: CMakeLists.txt  Makefile  PBS_template.sh
hybridMPI/src/: jacobi.c
inputs/: input_1680.txt  input_template.txt
mpi/: CMakeLists.txt  Makefile  PBS_template.sh
mpi/scripts/: replace_spread_variables.sh  report_mpi_performance.sh
mpi/src/: jacobi.c  main.c
openMP/: CMakeLists.txt  Makefile  PBS_template.sh
openMP/scripts/: report_hybrid_mpi_performance.sh
openMP/src/: jacobi.c
reports/: plot_sequential_optimizations_performance.py  sequential_optimizations_performance_2022_10_02_13_59_31.csv  sequential_optimizations_performance_2022_10_02_15_47_09.csv
reports/hybrid_mpi_performance/: plot_hybrid_mpi_performance.py
reports/mpi_performance/: mpi_performance_2022_10_04_19_12_50.csv  mpi_performance_2022_10_04_19_24_33.csv  mpi_performance_2022_10_04_19_38_37.csv  mpi_performance_2022_10_04_20_14_30.csv  mpi_performance_2022_10_04_20_33_51.csv  plot_mpi_performance.py
reports/optimizations_performance/: plot_sequential_optimizations_performance.py  sequential_optimizations_performance_2022_10_02_13_59_31.csv
sequential/: CMakeLists.txt  Makefile  PBS_template.sh  README.md
sequential/include/: jacobi_iteration_opt1.h  jacobi_iteration_opt1x.h  jacobi_iteration_opt2.h  jacobi_iteration_opt2x.h  jacobi_iteration_opt3.h  jacobi_iteration_opt3x.h  jacobi_iteration_opt4.h  jacobi_iteration_original.h  jacobi_iteration_params_t.h  one_jacobi_iteration.h  precalculations_t.h
sequential/scripts/: report_optimizations_performance.sh
sequential/src/: jacobi_iteration_opt1.c  jacobi_iteration_opt1x.c  jacobi_iteration_opt2.c  jacobi_iteration_opt2x.c  jacobi_iteration_opt3.c  jacobi_iteration_opt3x.c  jacobi_iteration_opt4.c  jacobi_iteration_original.c  jacobi_iteration_params_t.c  main.c  one_jacobi_iteration.c  precalculations_t.c
